--- a/ac06/thiago/matricula.html
+++ b/ac06/thiago/matricula.html
@@ -30,11 +30,11 @@
       <td>Gabriel</td>
       <td>1701000</td>
       <td>
-       <input type="radio" id="a1"/>
+       <input type="radio" id="a1" name="situacao" value="a01"/>
        <label class="situacao">Aprovado</label>
   	  </td>
   	  <td>
-  	  	<input type="radio" id="c1"/>
+  	  	<input type="radio" id="c1" name="situacao" value="c01"/>
   	  	<label class="situacao">Cancelado</label>
   	  </td>
     </tr>
@@ -43,11 +43,11 @@
       <td>Gabriela</td>
       <td>1701000</td>
       <td>
-       <input type="radio" id="a2"/>
+       <input type="radio" id="a2" name="situacao02" value="a02"/>
        <label class="situacao">Aprovado</label>
   	  </td>
   	  <td>
-  	  	<input type="radio" id="c2"/>
+  	  	<input type="radio" id="c2" name="situacao02" value="c02"/>
   	  	<label class="situacao">Cancelado</label>
   	  </td>
     </tr>
@@ -56,11 +56,11 @@
       <td>Guilherme</td>
       <td>1701000</td>
       <td>
-       <input type="radio" id="a3"/>
+       <input type="radio" id="a3" name="situacao03" value="a03"/>
        <label class="situacao">Aprovado</label>
   	  </td>
   	  <td>
-  	  	<input type="radio" id="c3"/>
+  	  	<input type="radio" id="c3" name="situacao03" value="c03"/>
   	  	<label class="situacao">Cancelado</label>
   	  </td>
     </tr>
@@ -69,11 +69,11 @@
       <td>Kallyne</td>
       <td>1701000</td>
       <td>
-       <input type="radio" id="a4"/>
+       <input type="radio" id="a4" name="situacao04" value="a04"/>
        <label class="situacao">Aprovado</label>
   	  </td>
   	  <td>
-  	  	<input type="radio" id="c4"/>
+  	  	<input type="radio" id="c4" name="situacao04" value="c04"/>
   	  	<label class="situacao">Cancelado</label>
   	  </td>
     </tr>
@@ -82,11 +82,11 @@
       <td>Matheus</td>
       <td>1701000</td>
       <td>
-       <input type="radio" id="a5"/>
+       <input type="radio" id="a5" name="situacao05" value="a05"/>
        <label class="situacao">Aprovado</label>
   	  </td>
   	  <td>
-  	  	<input type="radio" id="c5"/>
+  	  	<input type="radio" id="c5" name="situacao05" value="c05"/>
   	  	<label class="situacao">Cancelado</label>
   	  </td>
     </tr>
@@ -95,11 +95,11 @@
       <td>Michael</td>
       <td>1701000</td>
       <td>
-       <input type="radio" id="a6"/>
+       <input type="radio" id="a6" name="situacao06" value="a06"/>
        <label class="situacao">Aprovado</label>
   	  </td>
   	  <td>
-  	  	<input type="radio" id="c6"/>
+  	  	<input type="radio" id="c6" name="situacao06" value="c06"/>
   	  	<label class="situacao">Cancelado</label>
   	  </td>
     </tr>
@@ -108,11 +108,11 @@
       <td>Nicolas</td>
       <td>1701000</td>
       <td>
-       <input type="radio" id="a7"/>
+       <input type="radio" id="a7" name="situacao07" value="a07"/>
        <label class="situacao">Aprovado</label>
   	  </td>
   	  <td>
-  	  	<input type="radio" id="c7"/>
+  	  	<input type="radio" id="c7" name="situacao07" value="c07"/>
   	  	<label class="situacao">Cancelado</label>
   	  </td>
     </tr>
@@ -122,11 +122,11 @@
       <td>1701000</td>
       <td>
       
-       <input type="radio" id="a8"/>
+       <input type="radio" id="a8" name="situacao08" value="a08"/>
        <label class="situacao">Aprovado</label>
   	  </td>
   	  <td>
-  	  	<input type="radio" id="c8"/>
+  	  	<input type="radio" id="c8" name="situacao08" value="c08"/>
   	  	<label class="situacao">Cancelado</label>
   	  </td>
     </tr>
