--- a/ac06/AC06 - Completo/index.html
+++ b/ac06/AC06 - Completo/index.html
@@ -32,7 +32,7 @@
     <input type="date" id="nascimento" />
 
     <label>CPF*</label>
-    <input type="number" id="campocpf" name="cpf" placeholder="Digite seu CPF.." />
+    <input type="number" id="cpf" name="cpf" placeholder="Digite seu CPF.." />
 
     <label>Senha*</label>
     <input type="password"  id="senha" placeholder="Digite Senha.." pattern="(?=.*\d)(?=.*[a-z]).{8,}" title="A senha deve possuir ao menos um número e uma letra, e pelo menos 8 ou mais caracteres" />
